@@ -605,3 +605,4 @@
 	
 	create_report
 	- pass the file descriptor as parameter to PRINT_INFO
+	- improved layout of comparison report
